--- a/mmpfn/configs/cbis_ddsm.yaml
+++ b/mmpfn/configs/cbis_ddsm.yaml
@@ -1,3 +1,5 @@
 mgm_heads_list: [2,4,8,16,32,64,128,256]
 cap_heads_list: [2,4,8,12,16,24,32]
 image_type: all
+features_per_group: 2
+mixer_type: 'MGM+CAP'  # Optional: 'MGM', 'MGM+CAP', 'MoE'
